# AmenStyleSPECT

./: CMakeLists.txt  README.md  install_helper.py  package.sh
SPECTBrainRender/: CMakeLists.txt  SPECTBrainRender.py
SPECTBrainRender/Resources/Presets/: AmenColor.vp.json
SPECTBrainRender/Resources/UI/: SPECTBrainRender.ui
